<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Secure Box</string>
    <string name="action_settings">Settings</string>
    <string name="accept">Accept</string>
    
    <string name="cancel">Cancel</string>
    <string name="cancelled">Upload finished!</string>
    
    <string name="decrypt">Decrypt File</string>
    <string name="download_file">Download File</string>
    <string name="dropbox_logo">Dropbox Logo</string>
    
    <string name="empty">No files or directories</string>
    <string name="encrypt">Encrypt File</string>
    <string name="enter">Enter</string>
    <string name="error">Error</string>
    <string name="error_auth">Couldnt authenticate with Dropbox</string>
    <string name="error_auth2">This app was not authenticated properly</string>
    <string name="error_enc">Error Encrypting!</string>
    <string name="error_dec">Error Decrypting!</string>
    <string name="error_net">Network Error</string>
    <string name="error_dpx">Dropbox Error</string>
    <string name="error_ukw">Uknown Error</string>
    <string name="error_crt">
        Couldnt create a local file to store the image</string>
    <string name="exit">Exit</string>
    
    <string name="file_encrypted">File Encrypted!</string>
    <string name="file_decrypted">File Decrypted!</string>
    <string name="file_decrypted_downloaded">
        File Decrypted and downloaded in downloads!</string>
    <string name="file_empty">File or empty directory</string>
    
    <string name="get_new_account">Get a new Account</string>
    
    <string name="login">LogIn</string>
    <string name="login_failed">Login Failed</string>
    <string name="logo">Kangaroo Logo</string>
    <string name="link_dropbox">Link with Dropbox</string>
    
    <string name="missing_data">Missing Data</string>
    
    <string name="new_user">New User</string>
    <string name="new_user_added">New user added to the database</string>
    <string name="no">No</string>
    <string name="no_pictures">No pictures in that directory</string>
    
    <string name="password">password</string>
    <string name="password_again">password again</string>
    <string name="password_missmatch">Password missmatch</string>
    
    <string name="quit_title">Exit</string>
    <string name="quit_message">Sure you want to quit?</string>
    
    <string name="try_again">Try Again</string>
    
    <string name="user">username</string>
    <string name="upload_file">Upload File</string>
    <string name="uploaded_file">File successfully uploaded!</string>
    <string name="uploading">Uploading </string>
    
    <string name="welcome">Welcome to Secure Box!</string>
    
    <string name="yes">Yes</string>
</resources>
