<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/auth_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_dropbox" />

    <LinearLayout
        android:id="@+id/logged_in_display"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/image_empty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dropbox_logo"
            android:src="@drawable/dropbox_empty" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/roulette_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/download_file" />

            <Button
                android:id="@+id/photo_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/upload_file" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>