<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip" >
    
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="26sp"
        android:text="@string/app_name" />
    
    <ImageView
		android:id="@+id/logoSplash"
		android:src="@drawable/icon"
		android:contentDescription="@string/logo"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_gravity="center" />
    
    <RelativeLayout 
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
	    
	    <Button
	        android:id="@+id/ButtonEnter"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:onClick="clickEnter"
	        android:text="@string/enter" />
    </RelativeLayout>
</RelativeLayout>